--- a/.github/workflows/templated-lint.yml
+++ b/.github/workflows/templated-lint.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: 1.22
+      - run: go install github.com/tooryx/templated-plugins-linter@latest
       - run: |
-          go install github.com/tooryx/templated-plugins-linter@latest \
-          && find templated/templateddetector/ -type f \( -name '*.textproto' -a ! -name '*_test.textproto' -a ! -path '*/plugins/examples/*' \) \
+          find templated/templateddetector/ -type f \( -name '*.textproto' -a ! -name '*_test.textproto' -a ! -path '*/plugins/examples/*' \) \
             -exec templated-plugins-linter {} \;
